clusters/default/libre/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: libreoffice
  namespace: libre
  labels:
    app: libreoffice
spec:
  type: ClusterIP
  selector:
    app: libreoffice
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
    - name: https
      port: 443
      targetPort: 3001
      protocol: TCP
