clusters/default/libre/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: libre
  namespace: libre
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`libre.${BASE_DOMAIN}`)
      kind: Rule
      services:
        - name: libreoffice
          port: 80
